# inset_util

./: .gitignore  CMakeLists.txt  LICENSE  README.md  inset_utilConfig.cmake
include/inset_basis/: data_type.h  data_utils.h
include/inset_geometry/: ellipsoid.h  geometric_utils.h  polyhedron.h
include/inset_util/: inset.cpp  inset.h
